--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "helmet": "^7.1.0",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.10.5",
+    "@types/node-cron": "^3.0.11",
     "@types/xlsx": "^0.0.36",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
